--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,23 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let inmueble of inmuebles"col-6>
+      <ion-card>
+        <img *ngIf= "inmueble.hasOwnProperty('pictures')"
+        src="{{inmueble.pictures[0].url}}">
+        <ion-card-content> 
+        
+          <p *ngIf = "inmueble.hasOwnProperty('geo')">
+            {{inmueble.geo.name}}
+          </p>
+            <h2 *ngIf = "inmueble.hasOwnProperty('price')">
+              {{inmueble.price.formattedAmount}}
+              </h2>
+        </ion-card-content>
+      </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
